--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,5 +9,13 @@
         row-gap: 2rem;
         align-items: center;
         padding: 1.5rem;
+
+        app-head {
+            width: 65vw;
+        }
+
+        div.content {
+            width: 50vw;
+        }
     }
 }
