--- a/src/app/head/head.component.scss
+++ b/src/app/head/head.component.scss
@@ -1,6 +1,4 @@
 mat-card {
-    width: 50vw;
-
     mat-card-header {
         text-align: center;
     
@@ -9,6 +7,8 @@ mat-card {
         }
     
         mat-card-title {
+            font-style: oblique;
+            color: var(--primary);
             font-size: 30px;
         }
     }
