--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --primary: #3f51b5;
+    --accent: #ff4081;
+    --warn: #f44336;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
