feat: head component improvements

--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -4,12 +4,14 @@
             Calculadora Estatística
         </mat-card-title>
         <mat-card-subtitle>
-            Fornece cálculo automático das principais estatística descritivas
+            Fornece cálculo automático das principais estatística descritivas e distribuição de frequências. Além de gráficos adicionais.
         </mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content>
         <mat-divider inset></mat-divider>
+
+        <p>Para começar insira os números desejados no campo abaixo e confirme a operação</p>
 
         <mat-form-field appearance="outline">
             <mat-label>Valores</mat-label>
