--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,16 +6,19 @@
     main {
         display: flex;
         flex-direction: column;
-        row-gap: 2rem;
-        align-items: center;
         padding: 1.5rem;
 
         app-head {
             width: 65vw;
+            margin: auto auto 2rem auto;
         }
 
         div.content {
             width: 50vw;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            row-gap: 2rem;
         }
     }
 }
