--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-    Valores utilizados
+    Números utilizados
 </div>
 
 <mat-divider></mat-divider>
@@ -8,7 +8,7 @@
     <tbody>
         <tr *ngFor="let chunk of entriesChunks">
             <td *ngFor="let entry of chunk">
-                {{ entry }}
+                {{ entry | number : '1.2-2' }}
             </td>
         </tr>
     </tbody>
