--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,4 +1,5 @@
 <div class="title">
+    <mat-icon>info_outlined</mat-icon>
     Números utilizados
 </div>
 
@@ -8,7 +9,7 @@
     <tbody>
         <tr *ngFor="let chunk of entriesChunks">
             <td *ngFor="let entry of chunk">
-                {{ entry | number : '1.2-2' }}
+                {{ entry | number : '2.2-2' }}
             </td>
         </tr>
     </tbody>
