feat: desktop breakpoints

--- a/src/app/components/frequency-dist/frequency-dist.component.scss
+++ b/src/app/components/frequency-dist/frequency-dist.component.scss
@@ -19,7 +19,8 @@ mat-card {
             width: 100%;
             table-layout: fixed;
             border-spacing: 0;
-            padding: 1rem 2rem;
+            padding: 0 2rem;
+            margin-top: 1rem;
 
             td {
                 font-size: 1.17em;
