--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,15 +4,31 @@ main {
     padding: 1.5rem;
 
     app-head {
-        width: 65vw;
+        width: 90%;
         margin: auto auto 2rem auto;
+
+        @media screen and (min-width: 1024px) {
+            width: 80%;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 70%;
+        }
     }
 
     div.content {
-        width: 50vw;
+        width: 80%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
         row-gap: 2rem;
+
+        @media screen and (min-width: 1024px) {
+            width: 70%;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 60%;
+        }
     }
 }
