--- a/src/app/components/head/head-random/head-random.component.scss
+++ b/src/app/components/head/head-random/head-random.component.scss
@@ -1,5 +1,10 @@
 form {
     display: flex;
-    column-gap: 1rem;
+    gap: 1rem;
     margin-bottom: 1rem;
+    flex-direction: column;
+
+    @media screen and (min-width: 1440px) {
+        flex-direction: row;
+    }
 }
